# Insurancedapp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
framer/: badge.d.ts  badge.js  bento.d.ts  bento.js  button.d.ts  button.js  card.d.ts  card.js  chat-animation.d.ts  chat-animation.js  cta-section.d.ts  cta-section.js  faq.js  feauture-card.d.ts  feauture-card.js  footer.d.ts  footer.js  hamburgar.d.ts  hamburgar.js  loading.d.ts  loading.js  meta.json  navigation.d.ts  navigation.js  pricing.d.ts  pricing.js  q-a.d.ts  q-a.js  styles.css  testimonial.d.ts  testimonial.js
framer/chunks/: chunk-327PN5JK.js  chunk-3RDPVLNM.js  chunk-6TG7MLZT.js  chunk-BTSBQWPZ.js  chunk-OU34JAYF.js  chunk-UEZTKREZ.js  chunk-ZBRP4NJO.js
src/insurancedapp_backend/: Cargo.toml  insurancedapp_backend.did
src/insurancedapp_backend/src/: lib.rs
src/insurancedapp_frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/insurancedapp_frontend/src/: App.jsx  App.tsx  index.scss  layout.tsx  main.jsx
src/insurancedapp_frontend/src/components/: claim-card.tsx  claims-list.tsx  header.tsx  investor-list.tsx  logo.tsx  subscriber-list.tsx  validator-list.tsx
src/insurancedapp_frontend/src/components/ui/: badge.tsx  calendar.tsx  chart.tsx
src/insurancedapp_frontend/src/lib/: data.ts  types.ts
src/testinsurapp_backend/: Cargo.toml  testinsurapp_backend.did
src/testinsurapp_backend/src/: lib.rs
src/testinsurapp_frontend/: package.json
src/testinsurapp_frontend/src/: App.jsx
