[package]
name = "nigga_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.18.5"  # Latest stable as of forum posts :cite[1]:cite[8]
ic-cdk-macros = "0.18.5"  # Must match ic-cdk exactly :cite[1]:cite[8]
icrc-ledger-types = "0.1.10"
serde = { version = "1.0.197", features = ["derive"] }